initial commit for wrangling capstone 2

--- a/CapstoneTwo/Notebooks/data_wrangling.ipynb
+++ b/CapstoneTwo/Notebooks/data_wrangling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52ce0734",
+   "id": "bed51f05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "836b6a29",
+   "id": "36d8be6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b772028",
+   "id": "27d694c1",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "df766556",
+   "id": "613858ab",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e385ed4b",
+   "id": "a9110b8a",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c5174d",
+   "id": "1290cd31",
    "metadata": {},
    "source": [
     "The only missing values in the data lie within the bmi column. These NaNs account for 3.9% of the total data. We will need to decide what to do with these observations, whether we remove them completely or fill them in with a calculated value."
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "253618e6",
+   "id": "48256466",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "861d5543",
+   "id": "102f4e96",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0607e682",
+   "id": "a374b0da",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b05f35f7",
+   "id": "06fc7b1d",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e052ebe0",
+   "id": "1f887eda",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8caa5474",
+   "id": "e6bc68a4",
    "metadata": {},
    "source": [
     "The decision variable, stroke value, is very skewed. The number of patients that didn't have a stroke outweighs stroke victims by approximately 19:1"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6bde5b8e",
+   "id": "836a85ad",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0e130c82",
+   "id": "9fd80cdf",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c77233d",
+   "id": "5457deb9",
    "metadata": {},
    "source": [
     "From these histograms, we can see that hypertension, heart_disease, avg_glucose_level, and stroke are all skewed-right. The id histogram doesn't make sense here, since it is really a categorical variable. The ages appear to span a wide range in an evenly distributed way and the bmi values appear to be normally distributed with some outliers on the right. "
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "cac0aed2",
+   "id": "8ec3b6bb",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6bc8fb31",
+   "id": "3f94ddc4",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e53d67f5",
+   "id": "a583cd77",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb03c52",
+   "id": "0493f80e",
    "metadata": {},
    "source": [
     "We can see from the categorical variables that there are slightly more females, a majority of the observations are married, a majority of the observations work in the private sector, it is almost an even split between living in urban vs rural, and the majority of the observations either don't smoke or it is unknown."
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "73af7f36",
+   "id": "6ecb7329",
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d2b40186",
+   "id": "bb0cec82",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "1d6715a6",
+   "id": "9f0c4390",
    "metadata": {},
    "outputs": [
     {
@@ -1191,9 +1191,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b596d7ea",
+   "metadata": {},
+   "source": [
+    "Let me know what you think of this analysis so far and what else I can do to expand on it. It is a work in progress. So far, it seems like this data is in good enough shape to move forward with in the capstone but let me know your thoughts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9342ea",
+   "id": "cd84d398",
    "metadata": {},
    "outputs": [],
    "source": []
