supressed some warnings: second commit

--- a/CapstoneTwo/Notebooks/modeling.ipynb
+++ b/CapstoneTwo/Notebooks/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "daf4dfe4",
+   "id": "89284ce5",
    "metadata": {},
    "source": [
     "# Capstone 2: Modeling"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee7cc206",
+   "id": "3540991f",
    "metadata": {},
    "source": [
     "### 1. Sourcing and Loading"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd6b126c",
+   "id": "1616df86",
    "metadata": {},
    "source": [
     "#### 1a. Import Relevant Libraries"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ebe173d9",
+   "execution_count": 78,
+   "id": "2f6142d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,15 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from library.sb_utils import save_file"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c08eaffa",
+   "id": "30b9c469",
    "metadata": {},
    "source": [
     "#### 1b. Load the Data"
@@ -51,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a69b4b2",
+   "id": "7a48037d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3fbf0ff8",
+   "id": "3cc160c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0475e1c",
+   "id": "e91c92af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "728fead9",
+   "id": "ff80e827",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7a1362a3",
+   "id": "10ce5336",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dc1fd01f",
+   "id": "a4305bef",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3831bc78",
+   "id": "b4145598",
    "metadata": {},
    "source": [
     "### 2. Create Baseline Models"
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957f55bb",
+   "id": "523d0062",
    "metadata": {},
    "source": [
     "Now, we can select a few algorithms and create baseline models. In these models, we want to keep things fairly simple and strive to select one or two algorithms to move forward with. Once we select the best models, we can do further parameter testing and try to optimize the performance. Speaking of performance, we will look at the ROC curves for the baseline models to determine their performace. Furthermore, reducing false-negative predictions (predicting non-stroke when actually stroke) is very important in healthcare datasets such as these where the predictions could lead to missing a diagnosis. \n",
@@ -358,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6539bfb6",
+   "id": "8ac6a680",
    "metadata": {},
    "source": [
     "#### 2a. Random Forest Classifier"
@@ -367,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "17ba1b5b",
+   "id": "847ea020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "01732262",
+   "id": "82283fc9",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e1de2dbe",
+   "id": "82486c83",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "66209233",
+   "id": "0f8403a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6f4a3721",
+   "id": "03921c30",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b12bfe86",
+   "id": "2f011b92",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea91a9d9",
+   "id": "1e278aff",
    "metadata": {},
    "source": [
     "As we can see from the ROC curve and the confusion matrix, this classifier did a bad job at distinguishing the classes. This model has zero recall, meaning it predicted all observations to be '0'."
@@ -507,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c3ed30",
+   "id": "5483d8fc",
    "metadata": {},
    "source": [
     "#### 2b. Support Vector Machine"
@@ -516,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7212a29a",
+   "id": "67158673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "726cd6d2",
+   "id": "846ea639",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8e1aba01",
+   "id": "4dd6a5b4",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "23781f06",
+   "id": "06f9234f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f3fd6cf7",
+   "id": "c7750710",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a0625494",
+   "id": "8bffc1e3",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffd08cf0",
+   "id": "2359a058",
    "metadata": {},
    "source": [
     "The same thing happened again: all 62 stroke events were predicted to be non-strokes. This is a problem and a useless model for our goal. We will keep trying to find another model that can distinguish the two classes."
@@ -653,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c187b6",
+   "id": "11ade028",
    "metadata": {},
    "source": [
     "#### 2c. Logistic Regression"
@@ -662,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cc887639",
+   "id": "80cbc373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,78 +674,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "3bd0820d",
+   "execution_count": 79,
+   "id": "f495f080",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:372: FitFailedWarning: \n",
-      "25 fits failed out of a total of 75.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "25 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1461, in fit\n",
-      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
-      "  File \"C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 447, in _check_solver\n",
-      "    raise ValueError(\n",
-      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [ 0. nan  0.  0. nan  0.  0. nan  0.  0. nan  0.  0. nan  0.]\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -752,7 +687,7 @@
        "             scoring='recall')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "4f983e8c",
+   "execution_count": 80,
+   "id": "a71aa0c7",
    "metadata": {},
    "outputs": [
     {
@@ -786,19 +721,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "651f9985",
+   "execution_count": 81,
+   "id": "5d853e75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tscofield\\Documents\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1483: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create model with best parameters\n",
     "logr = LogisticRegression(C=0.1, penalty='none')\n",
@@ -810,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "402cd764",
+   "id": "f901fd62",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2acc9206",
+   "id": "dcb5c0cc",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53aedf06",
+   "id": "3675d6a3",
    "metadata": {},
    "source": [
     "Same results..."
@@ -876,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0139d38b",
+   "id": "b3197e2f",
    "metadata": {},
    "source": [
     "#### 2d. XGBoost"
@@ -885,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "be0de698",
+   "id": "f8631482",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "73d29350",
+   "id": "0284cba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "2077f2e9",
+   "id": "c0d835ae",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c4475e5c",
+   "id": "691578b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "65accbbc",
+   "id": "90504478",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2b4e508f",
+   "id": "cd4f9511",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e4922d",
+   "id": "6c810b22",
    "metadata": {},
    "source": [
     "This model predicted 2 stroke victims correctly, and predicted 4 incorrectly. This is better than a recall of zero but needs much improvement to be a sensible model."
@@ -1033,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08cf9183",
+   "id": "6f959753",
    "metadata": {},
    "source": [
     "#### 2e. CatBoost"
@@ -1042,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7525a6b1",
+   "id": "d750ca8a",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "921b26a4",
+   "id": "42b0cbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "51891e95",
+   "id": "f15a9745",
    "metadata": {},
    "outputs": [
     {
@@ -11139,7 +11065,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "74eb532f",
+   "id": "19dc1add",
    "metadata": {},
    "outputs": [
     {
@@ -11158,7 +11084,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "68ca9262",
+   "id": "e2bbec16",
    "metadata": {},
    "outputs": [
     {
@@ -11279,7 +11205,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7697d4eb",
+   "id": "b96b099d",
    "metadata": {},
    "outputs": [
     {
@@ -11315,7 +11241,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4290bae8",
+   "id": "6f2c07f7",
    "metadata": {},
    "outputs": [
     {
